<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="80dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bintou.tpandroid.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/img_carre"
                android:onClick="Carre"
                app:srcCompat="@drawable/ic_carre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@null"
            android:gravity="center">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/img_morpion"
                android:onClick="Morpion"
                app:srcCompat="@drawable/ic_tictactoe" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:gravity="center">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/img_memory"
                android:onClick="Memory"
                app:srcCompat="@drawable/ic_memory" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
