<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_spe" />

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:textSelectHandleLeft="@dimen/default_gap"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/l1c1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l1c2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l1c3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resL1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vide"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne 1           -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne de +        -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/l2c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l2c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l2c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resL2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vide"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne 2           -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne de +        -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/l3c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l3c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/l3c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/vide"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vide"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne 3           -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:gravity="center"
                android:text="@string/egal"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne de =        -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resC1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/test"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resC2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:gravity="center"
                android:text="@string/test"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resC3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:gravity="center"
                android:text="@string/test"
                android:textStyle="bold" />

        </TableRow> <!-- Ligne de resultat -->

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/envoyer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/envoyer"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/next"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/nouveau"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/nouveau"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/exit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

